# where-is-teemo

./: AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  package.json
.beads/: issues.jsonl
.claude/rules/: where-is-teemo-project.md  where-is-teemo-proxy-architecture.md  where-is-teemo-tauri-patterns.md
.github/workflows/: release.yml
docs/: INSTALLATION.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/proxy/: certs.rs  config_proxy.rs  mod.rs  presence.rs  xmpp_proxy.rs
src-tauri/src/riot/: config.rs  mod.rs  process.rs
