[package]
name = "where-is-teemo"
version = "0.1.0"
description = "Appear offline in League of Legends and VALORANT"
authors = ["mvacoimbra"]
edition = "2021"

[lib]
name = "where_is_teemo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
log = "0.4"
